--- a/app/src/main/res/layout/activity_bottom.xml
+++ b/app/src/main/res/layout/activity_bottom.xml
@@ -22,10 +22,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
+        android:background="@drawable/rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:paddingTop="40dp"
         app:menu="@menu/navigation" />
 
 </android.support.constraint.ConstraintLayout>
