--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -137,5 +137,22 @@
         android:textColor="#ff5f71"
         android:textSize="18sp" />
 
+    <TextView
+        android:id="@+id/fast_login"
+        android:layout_width="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/login_shape_bg"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/login"
+        android:text="@string/fast_login"
+        android:gravity="center"
+        android:textColor="#ff5f71"
+        android:textSize="18sp" />
+
+
 
 </android.support.constraint.ConstraintLayout>
