--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,19 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/che_home"
+        android:title="" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_circle"
+        android:icon="@drawable/che_circle"
+        android:iconTintMode="screen"
+
+        android:title="" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_shop"
+        android:title=""
+        android:icon="@drawable/commom_tab_btn_shopping"/>
+
+    <item
+        android:id="@+id/navigation_order"
+        android:icon="@drawable/che_order"
+        android:title="" />
+
+    <item
+        android:id="@+id/navigation_my"
+        android:icon="@drawable/che_my"
+        android:title="" />
+
+
+
 
 </menu>
